fixed the gap issue on resize

--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,30 +1,4 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-}
 
-:host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
-  color: #333;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
-p {
-  margin: 0;
-}
 
 .wrapper {
   padding: 50px;
@@ -52,14 +26,12 @@ p {
   line-height: 100px;
   border: 1px solid #ffa8a8;
   background-color: white;
-  transition: box-shadow 50ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 10ms linear;
 }
 
 .nui-drag-active {
   user-select: none;
-  box-shadow: 0px 9px 19px -10px #ffa8a8;
-}
-
-.box {
-  background-color: red;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  // box-shadow: 0px 9px 19px -10px #ffa8a8;
 }
